<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="fitCenter"
                android:src="@drawable/batman"
                tools:src="@drawable/batman"
                android:layout_marginEnd="12dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_payment_item_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Deneme ürünü"/>

                <TextView
                    android:id="@+id/textViewProductQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_paymet_unit_1"
                    android:textSize="14sp"
                    tools:text="Adet: 2"/>

                <TextView
                    android:id="@+id/textViewProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_paymet_price_99_99_tl"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_red_dark"
                    tools:text="Fiyat: 299.99 TL"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
