<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <!-- Her ürün için CardView -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <!-- Ürün Görseli -->
            <ImageView
                android:id="@+id/imageViewProduct"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/placeholder1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="12dp">

                <!-- Ürün Adı -->
                <TextView
                    android:id="@+id/textViewProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_product_item_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Laptop Çantası" />

                <!-- Ürün Adedi -->
                <TextView
                    android:id="@+id/textViewProductQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_product_unit_2"
                    android:textSize="14sp"
                    tools:text="Adet: 3" />

                <!-- Ürün Fiyatı -->
                <TextView
                    android:id="@+id/textViewProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_product_unit_price_150_tl"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_red_dark"
                    tools:text="Fiyat: 450 TL" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>
