<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.fragment.CartFragment">

        <LinearLayout
            android:id="@+id/emptyCartLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieCartAnimation"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:lottie_rawRes="@raw/green_cart"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sepetiniz_bos"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/buttonShopNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urunleri_kesfet"
                android:layout_marginTop="12dp"
                android:backgroundTint="#0C8A7B"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            tools:listitem="@layout/cart_item_design" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/editTextCouponCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/discountshape"
                android:drawablePadding="8dp"
                android:hint="@string/kupon_kodu"
                android:padding="10dp"
                android:background="@drawable/edittext_background"/>

            <Button
                android:id="@+id/buttonApplyCoupon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_green"
                android:text="@string/uygula"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_marginStart="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/textViewOldPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="100.00 TL" />

            <TextView
                android:id="@+id/textViewTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/main_green"
                tools:text="99.99 TL" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/checkout_button_bg"
            android:padding="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/sepet_icon_add_to_cart"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/satin_al"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

</layout>
